--- a/docs/考研英语一/2019.md
+++ b/docs/考研英语一/2019.md
@@ -10,15 +10,15 @@ Directions:
 
 Read the following text. Choose the best word (s) for each numbered blank and mark A, B, C or D on the ANSWER SHEET. (10 points)
 
-　　Today we live in a world where GPS systems, digital maps, and other navigation apps are available on our smart phone. ___1___ of us just walk straight into the woods without a phone. But phones__2__on batteries, and batteries can die faster than we realize.__3__you get lost without a phone or a compass, and you __4__can’t find north, we have a few tricks to help you navigate__5__to civilization, one of which is to follow the land.
+　　Today we live in a world where GPS systems, digital maps, and other navigation apps are available on our smart phone. [1]  of us just walk straight into the woods without a phone. But phones  [2]  on batteries, and batteries can die faster than we realize.  [3]  you get lost without a phone or a compass, and you   [4]  can’t find north, we have a few tricks to help you navigate  [5]  to civilization, one of which is to follow the land.
 
-　　When you find yourself well__6__ a trail, but not in a completely __7__area, you have to answer two questions: Which __8__is downhill, in this particular area? And where is the nearest water source? Humans overwhelmingly live in valleys, and on supplies of fresh water.__9__, if you head downhill, and follow any H2O you find, you should __10__see signs of people.
+　　When you find yourself well  [6]   a trail, but not in a completely   [7]  area, you have to answer two questions: Which   [8]  is downhill, in this particular area? And where is the nearest water source? Humans overwhelmingly live in valleys, and on supplies of fresh water.  [9]  , if you head downhill, and follow any H2O you find, you should   [10]  see signs of people.
 
-　　If you’ve explored the area before, keep an eye out for familiar sights—you may be __11__how quickly identifying a distinctive rock or tree can restore your bearings.
+　　If you’ve explored the area before, keep an eye out for familiar sights—you may be   [11]  how quickly identifying a distinctive rock or tree can restore your bearings.
 
-　　Another__12__:Climb high and look for signs of human habitation.__13__,even in dense forest, you should able to __14__gaps in the tree line due to roads, train tracks, and other paths people carve__15__ the woods. Head toward these __16__ to find a way out. At night, scan the horizon for __17__ light sources, such as fires and streetlights, then walk toward the glow of light pollution.
+　　Another  [12]  :Climb high and look for signs of human habitation.  [13]  ,even in dense forest, you should able to   [14]  gaps in the tree line due to roads, train tracks, and other paths people carve  [15]   the woods. Head toward these   [16]   to find a way out. At night, scan the horizon for   [17]   light sources, such as fires and streetlights, then walk toward the glow of light pollution.
 
-　　__18__,assuming you’re lost in an area humans tend to frequent, look for the __19__we leave on the landscape. Trail blazes, tire tracks, and other features can __20__you to civilization.
+　　  [18]  ,assuming you’re lost in an area humans tend to frequent, look for the   [19]  we leave on the landscape. Trail blazes, tire tracks, and other features can   [20]  you to civilization.
 
 
 
